--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@langchain/google-genai": "^0.2.10",
     "@langchain/ollama": "^0.2.0",
     "axios": "^1.9.0",
+    "chromadb": "^3.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "langchain": "^0.3.27",
